# AstrID

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONFIGURATION_FIXES.md  Dockerfile.api  Dockerfile.api.optimized  Dockerfile.base  Dockerfile.mlflow  Dockerfile.prefect  Dockerfile.prefect-server  Dockerfile.prefect.optimized  Dockerfile.worker  LICENSE  Makefile  README.md  alembic.ini  astrid-aliases.sh  compose.yaml  csci-490-course-outline.md  csci-491-course-outline.md  curated.txt  debug_real_data.py  docker-compose-reference.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yaml  docker-setup.md  env.example  package-lock.json  pyproject.toml  start-dev-with-frontend.sh  start-dev.sh  start-frontend.sh  test_r2_reference_dataset.py
.github/workflows/: ci.yml.OLD  nb-tier1.yml.OLD  nb-tier2.yml.OLD
OLD/: WCS_TO_PIXEL_REFERENCE.md  dataGathering.py  imageProcessing.py
alembic/: README  env.py
alembic/versions/: 2025_09_08_0524-3546a9f18672_initial_migration.py  2025_09_08_0656-18ac04758a21_initial_migration.py  2025_09_08_0735-ba3eba0bb123_add_all_domain_tables.py  2025_09_12_0851-49667e49d15c_added_energy_tracking_fields.py  (+2 more)
configs/: README.md  best_yield_combined.yaml  extended_sn_dataset.yaml  full_catalog.yaml  galex_golden_era.yaml  galex_uv_dataset.yaml  hst_high_resolution.yaml  multi_mission_dataset.yaml  ps1_optical_dataset.yaml  sdss_optical_references.yaml  sn2014j_only.yaml  swift_continuous.yaml  swift_uv_dataset.yaml  swift_uv_test.yaml  tess_allsky_modern.yaml  ztf_modern_transients.yaml  ztf_ptf_optical.yaml
docker/: README.md  api.Dockerfile  docker-compose.yaml  start-dev.sh  worker.Dockerfile
docs/: architecture.md  database-schema-design.md  design-overview.md  development.md  file-structure.md  linear-tickets.md  logging-guide.md  tech-stack.md  test-framework-summary.md  training-data-pipeline.md  workflow-orchestration-setup.md  workflow-orchestration.md
examples/: real_data_training_demo.py  storage_example.py
frontend/: .gitignore  Dockerfile  Dockerfile.dev  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
notebooks/: API_KEYS_IMPLEMENTATION.md  EXPLORATORY_NOTEBOOK_PLAN.md  EXPLORATORY_NOTEBOOK_PLAN_tmp.html  START-HERE.md  __init__.py  api_ingestion_troubleshooting.ipynb  astr73_testing.ipynb  astr74_testing.ipynb  astr75_testing.ipynb  astr76_testing.ipynb  astr77_testing.ipynb  astr79_testing.ipynb  astr80_inference_testing.ipynb  astr81_testing.ipynb  astr92_workers_testing.ipynb  auth_helper.py  auth_template.py  create_api_key.py  data_ingestion_exploration.ipynb  dataset_generation_example.ipynb  exploration.ipynb  ingest_real_data_for_training.ipynb  pipeline_config.ipynb  processing.ipynb  simple_ingestion_test.ipynb  supernova_training_pipeline.ipynb  test_api_keys.py  test_training_pipeline.py  training_data_pipeline_test.ipynb
output/: sn_queries.json  sn_queries_2010s.json  sn_queries_all_missions.json
resources/: sncat_compiled.txt  sncat_remaining.txt
scripts/: README_SN_FITS_QUERY.md  TROUBLESHOOTING_RESULTS.md  analyze_download_failures.py  audit_sn_downloads.py  augment_triplet_npz.py  cleanup_auxiliary_files.py  cleanup_incomplete_sn.py  compile_supernova_catalog.py  create_training_triplets.py  download_compiled_catalog.sh  download_sn_fits.py  energy_tracking_example.py  evaluate_real_bogus_cnn.py  example_load_triplets.py  fast-build.sh  filter_query_results.py  filter_same_mission_observations.py  filter_triplet_npz_by_list.py  filter_triplet_npz_quality.py  generate_difference_images.py  generate_slides_pptx.py  identify_same_mission_pairs.py  ingest_sn_fits_to_pipeline.py  lint.sh  organize_training_pairs.py  query_and_download_all.sh  query_chunked_1000.sh  query_compiled_catalog.sh  query_more_compiled.sh  query_sn_fits_chunked.py  query_sn_fits_from_catalog.py  reset_and_query_1000.sh  run-tests.sh  run_pipeline_from_config.py  run_pipeline_per_sn.py  schedule_cleanup.sh  setup-prefect.sh  setup.sh  start_prefect_worker.sh  test-api.sh  (+4 more)
src/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_astr92_workers.py  test_framework_validation.py  test_workflow_orchestration.py  utils.py
(+470 files in other folders)
